fix item spacing generically

--- a/styles/item.module.css
+++ b/styles/item.module.css
@@ -50,30 +50,45 @@
     width: 100%;
     padding-right: 12px;
 }
+
 .tweetSkeleton {
     width: 100%;
 }
+
 .tweetSkeleton {
     border: 0.05rem solid var(--theme-borderColor);
     border-radius: 12px;
     height: 200px;
     padding: 1.5rem;
 }
+
 .tweetSkeleton .img {
     height: 48px;
     width: 48px;
     border-radius: 50%;
 }
-.tweetSkeleton .content1, .tweetSkeleton .content2 {
+
+.tweetSkeleton .content1,
+.tweetSkeleton .content2 {
     height: 50%;
     margin-top: 1rem;
 }
+
 .tweetSkeleton .line {
     height: 25%;
     margin: 0.5rem 0;
     width: 100%;
     border-radius: .4rem;
 }
+
 .tweetSkeleton .line:last-child {
     width: 75%;
+}
+
+.fullItemContainer {
+    margin-bottom: .5rem;
+}
+
+.fullItemContainer:empty {
+    margin: 0;
 }
